--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        run: "ls"
+        run: echo "ls"
       #   uses: actions/checkout@v3
 
       # # Install the cosign tool except on PR
