--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,8 +34,9 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout repository
-        run: echo "ls"
+      - name: List files
+        run: |
+          ls ${{ github.workspace }}
       #   uses: actions/checkout@v3
 
       # # Install the cosign tool except on PR
