--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,7 +44,7 @@ jobs:
           docker build -t malademcn/spring_native_amd64_java17_graalvm_22.3.0:0.1 -t malademcn/spring_native_amd64_java17_graalvm_22.3.0 .
       - name: Check if the image is present on the system
         run: |
-          docker ps
+          docker images
       #   uses: actions/checkout@v3
 
       # # Install the cosign tool except on PR
