--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,10 +48,8 @@ jobs:
       - name: Try login to docker
         uses: docker/login-action@v2
         with:
-          username: username
-          password: password
-          # username: ${{ secrets.DOCKERHUB_USERNAME }}
-          # password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       #   uses: actions/checkout@v3
 
       # # Install the cosign tool except on PR
