[*] testing github actions

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,7 +32,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: Build docker image
         run: |
-          docker build -t talosi/mvn-spring-native:1.0 -t talosi/mvn-spring-native .
+          docker build -t talosi/mvn-spring-native:graalvm-ce-java17-linux-amd64-22.3.0 -t talosi/mvn-spring-native .
       - name: Check if the image is present on the system
         run: |
           docker images
