--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,9 +11,8 @@ on:
     branches: [ "main" ]
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
+  IMAGE_NAME: talosi/mvn-spring-native
+  IMAGE_VERSION: graalvm-ce-java17-linux-amd64-22.3.0
 
 jobs:
   build:
@@ -32,7 +31,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: Build docker image
         run: |
-          docker build -t talosi/mvn-spring-native:graalvm-ce-java17-linux-amd64-22.3.0 -t talosi/mvn-spring-native .
+          docker build -t env.IMAGE_NAME:env.IMAGE_VERSION -t env.IMAGE_NAME .
       - name: Check if the image is present on the system
         run: |
           docker images
@@ -43,7 +42,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push the new docker images with version tag
         run: |
-          docker push talosi/mvn-spring-native:1.0
+          docker push env.IMAGE_NAME:env.IMAGE_VERSION
       - name: Push the new docker images with latest tag
         run: |
-          docker push talosi/mvn-spring-native:latest
+          docker push env.IMAGE_NAME
